# cord

./: .gitignore  README.md  pyproject.toml  test.py
examples/: simple_container.py
pyoci/: __init__.py  base_types.py  common.py  filesystem.py  int_types.py  main.py  runtime_features.py  runtime_hooks.py  version_utils.py
pyoci/client/: __init__.py
pyoci/client/spec/: features.py  linux_features.py  state.py
pyoci/config/: __init__.py  filesystem.py  hooks.py
pyoci/config/platform/: vm.py  windows.py  zos.py
pyoci/config/process/: capabilities.py  main.py
pyoci/distribution/client/: __init__.py  errors.py
pyoci/image/: config.py  const.py  descriptor.py  digest.py  index.py  layout.py  manifest.py  platform.py  well_known.py
pyoci/platform/: solaris.py  vm.py  windows.py  zos.py
pyoci/platform/linux/: devices.py  main.py  runtime_features.py
pyoci/process/: main.py  scheduler.py
pyoci/runtime/: __init__.py
pyoci/runtime/client/: __init__.py  cli.py  errors.py  executor.py  io.py  utils.py
pyoci/runtime/config/: __init__.py  filesystem.py  hooks.py  process.py
pyoci/runtime/spec/: features.py  linux_features.py  state.py
pyoci/spec/: __init__.py  common.py  filesystem.py  hooks.py  runtime_features.py  runtime_hooks.py
pyoci/spec/platform/: solaris.py  vm.py  windows.py  zos.py
pyoci/spec/process/: capabilities.py  main.py  scheduler.py
pyoci/utils/: async_waitpid.py
src/cord/: base_types.py
src/cord/cdi/: parse.py  spec.py
src/cord/run/: __init__.py  utils.py
src/cord/utils/: clwrap.py  jsonstruct.py
(+57 files in other folders)
